# compiler

./: .gitignore  CMakeLists.txt  MAKEFILE  README  README.md  package.json
.github/workflows/: verification_tests.yml
C_COMP/include/: codegen.h
C_COMP/src/: codegen.c
Development/: you-are-here.txt
Docs/: CONTRIBUTING.md  ROADMAP.md  proposed_examples_directory.md  structure.md  v0.1.0.md
bootstrap/include/: lexer_h.flo
bootstrap/src/: ast.flo  codegen.flo  globals.flo  lexer.flo  main.flo  parser.flo
examples/: binary_op.flo  cast.flo  char.flo  error.flo  fib.flo  float.flo  for.flo  functions.flo  memory.flo  null.flo  pointer.flo  ptr.flo  sizeof.flo  src.flo  struct.flo  test.flo
examples/Memory/: memory.flo  new_prune.flo  pointer_deref.flo  pointer_math.flo  ptr.flo  realloc.flo  sizeof.flo
examples/control/: binary_ops.flo  control.flo  for.flo  functions.flo  if_else.flo  not.flo  unary_neg.flo  while.flo
examples/import/: import.flo
examples/io/: io.flo  print.flo
examples/memory/: memory.flo
examples/misc/: fibonacci.flo  misc.flo
examples/types/: array.flo  cast.flo  char.flo  double.flo  float.flo  int.flo  null.flo  string.flo  struct.flo  types.flo
extensions/flower-vscode/: index.js  language-configuration.json  package.json
include/: ANSI.h  ast.h  codegen.h  lexer.h  parser.h
scripts/: build.sh
src/: ast.flo  codegen.c  codegen.flo  file.c  file.flo  formatter.flo  globals.flo  lexer.c  lexer.flo  main.c  main.flo  parser.c  parser.flo
src/stdlib/: string.flo
(+1 files in other folders)
